# graphy

./: .gitignore  CMakeLists.txt  todo.md
src/: ast.c  main.c
